# procmem-manipulation

./: .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt
demo/include/: mem.hpp  proc.hpp
demo/src/: main.cpp  mem.cpp  proc.cpp
playground/: CMakeLists.txt
playground/include/: term.hpp
playground/lib/: CMakeLists.txt
playground/src/: main.cpp  term.cpp
